--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,15 @@
 version: '3.8'
+
 services:
   mysql:
     image: mysql:8.0
     container_name: mysql_homicidios
     restart: unless-stopped
     environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD:-hom123}
-      MYSQL_DATABASE: ${MYSQL_DATABASE:-homicidios_db}
+      MYSQL_ROOT_PASSWORD: rootpass 
+      MYSQL_DATABASE: homicidios_db
+      MYSQL_USER: Rai
+      MYSQL_PASSWORD: hom123
     ports:
       - "3306:3306"
     volumes:
@@ -19,6 +22,7 @@ services:
 
   adminer:
     image: adminer
+    container_name: adminer_homicidios
     restart: unless-stopped
     ports:
       - "8080:8080"
